--- a/templates/index/home.html.twig
+++ b/templates/index/home.html.twig
@@ -6,31 +6,31 @@
 {% block body %}
 <div
     class="relative overflow-hidden bg-cover bg-no-repeat"
-    style="background-position: 50%; background-image: url('img/ghost_face_bg.jpg'); height: 500px;">
+    style="background-position: 50%; background-image: url('img/ghost_face_bg.jpg'); height: 459px;">
 
     <div class="px-6 text-left text-white md:px-12">
         <h1 class="mt-20 mb-4 pb-20 text-5xl font-bold">UNE NOUVELLE FAÇON D'AVOIR PEUR</h1>
-        <h3 class="mb-2 text-3xl font-bold">Faites l'essai de 7 jours gratuits</h3>
+        <h3 class="mb-5 text-3xl text-white font-bold">Faites l'essai de 7 jours gratuits</h3>
         <div class="mb-0">
             <div class="relative flex w-full flex-wrap items-stretch">
                 <div class="relative flex text-white items-stretch">
                     <input
                     type="search"
-                    class="relative m-1 -mr-0.5 block w-80 min-w-0 flex-auto px-4 py-4 font-normal dark:text-black"
+                    class="relative m-1 -mr-0.5 block w-80 min-w-0 flex-auto px-4 py-3 font-normal dark:text-black focus:outline-none focus:ring-0 "
                     placeholder="Adresse électronique"
                     aria-label="Search"
                     aria-describedby="button-addon3" />
                     <!--Search button-->
                     <button
-                    class="relative z-2 border-2 px-4 py-4 text-m font-medium border-white  text-bold uppercase transition text-white bg-gray-950 hover-bg-opacity-5 focus:outline-none focus:ring-0 "
+                    class="border-0 px-3 text-xl border-red-600 font-bold bg-red-600   "
                     type="button"
                     id="button-addon3"
                     data-te-ripple-init>
                     J'EN PROFITE
-                </button>
+                    </button>
             </div>
         </div>
-        <p class="mt-6 mb-5 pb-20 text-xs font-semibold">En cliquant le bouton « J'en profite », vous indiquez avoir lu et accepté les <u>Termes de Services</u> et la <u>Politique de confidentialité</u>.</p>
+        <p class="mt-12 mb-5 text-xs font-semibold">En cliquant le bouton « J'en profite », vous indiquez avoir lu et accepté les <u>Termes de Services</u> et la <u>Politique de confidentialité</u>.</p>
     </div>
 </div>
 {% endblock %}
