--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,79 +1,40 @@
 <header>
 <!-- Navigation bar -->
 <nav
-class="relative flex w-full items-center justify-between bg-white text-neutral-950 shadow-lg hover:text-neutral-900 focus:text-neutral-700 dark:text-white-600 md:flex-wrap md:justify-start"
+class="relative flex w-full items-center focus:ring-0 bg-white text-neutral-950 shadow-lg hover:text-neutral-900 dark:text-white-600 md:flex-wrap md:justify-start"
 data-te-navbar-ref>
-<div class="flex w-full flex-wrap items-center justify-between ">
-    <a href="index.php">
+<div class="flex w-full flex-wrap items-center">
+    <a href="/">
         <div class="Logo">
             <source srcset="img/devils_palace_logo.png">
             <img src="img/devils_palace_logo.png"  alt="Logo Devil's Place" class="img-fluid ml-12" width="100" height="90">
-        </div>
-        
+        </div>  
     </a>
-    
-    
-<!-- Navigation links -->
-<div
-class="!visible hidden grow basis-[100%] items-center lg:!flex lg:basis-auto"
-id="navbarSupportedContentX"
-data-te-collapse-item>
-<div class="relative">
-  <input
-    class="ml-12 mb-2 pl-10 transition-colors w-2/3 text-gray-800 leading-tight focus:outline-none focus:ring-gray-950 border-none"
-    id="username"
-    type="text"
-    placeholder="Recherche"
-  />
-
-  <div class="absolute right-0 inset-y-0 flex items-center">
-    <svg
-      id="search-icon"
-      xmlns="http://www.w3.org/2000/svg"
-      class="-ml-1 mr-16 mb-1 h-4 w-5 text-gray-600 hover:text-gray-800 cursor-pointer"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke="currentColor"
-    >
-      <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        d="M6 18L18 6M6 6l12 12"
-      />
-    </svg>
-  </div>
-
-  <div class="absolute left-0 inset-y-0 flex items-center">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="h-6 w-6 mb-2 ml-14 text-gray-400 hover:text-gray-500 cursor-pointer"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke="currentColor"
-    >
-      <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-      />
-    </svg>
-  </div>
-</div>
-
+     <div class="pt-2 relative mx-auto text-gray-800">
+        <input class="border-2 border-red-600 bg-white h-10 px-5 pr-16 rounded-lg text-m text-red-600"
+          type="search" name="search" placeholder="Recherche">
+        <button type="submit" class="absolute right-0 top-0 mt-5 mr-4">
+          <svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
+            viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve"
+            width="512px" height="512px">
+            <path
+              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+          </svg>
+        </button>
+      </div>
 <ul
 class="mr-auto flex flex-col lg:flex-row"
 data-te-navbar-nav-ref>
 
-<div class="block transition duration-150 ease-in-out hover:text-neutral-700 font-semibold focus:text-neutral-700 disabled:text-black/30 dark:hover:text-neutral-900 dark:focus:text-neutral mt-2 ml-12 mr-4" data-te-nav-link-ref data-te-ripple-init data-te-ripple-color="light">
+{# <div class="block transition duration-150 ease-in-out hover:text-neutral-700 font-semibold focus:text-neutral-700 disabled:text-black/30 dark:hover:text-neutral-900 dark:focus:text-neutral mt-2 ml-12 mr-4" data-te-nav-link-ref data-te-ripple-init data-te-ripple-color="light">
     
-    <!-- <svg class="w-[17px] h-[20px] ml-8 text-gray-800 dark:text-black" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 8" id="dropdown-toggle">
+    <svg class="w-[17px] h-[20px] ml-8 text-gray-800 dark:text-black" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 8" id="dropdown-toggle">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 5.326 5.7a.909.909 0 0 0 1.348 0L13 1"/>
-    </svg> -->
-</div>
+    </svg> 
+</div> #}
 
-<!-- <ul class="absolute z-[1000] float-left pt-2 mt-1 pr-3 pl-3 ml-8 hidden min-w-max list-none overflow-hidden rounded-lg bg-red-300 bg-clip-padding text-left text-base text-slate-950 border shadow-lg" id="dropdown-menu" style="top: 70px;">
+{# <ul class="absolute z-[1000] float-left pt-2 mt-1 pr-3 pl-3 ml-8 hidden min-w-max list-none overflow-hidden rounded-lg bg-red-300 bg-clip-padding text-left text-base text-slate-950 border shadow-lg" id="dropdown-menu" style="top: 70px;">
         <a href="a-l'affiche.php">À l'Affiche</a>
     </li>
     <li>
@@ -82,7 +43,17 @@ data-te-navbar-nav-ref>
     <li>
         <a href="thriller.php">Thriller</a>
     </li>
-</ul>  -->
+</ul>   #}
+<li class="mb-4 lg:mb-0 mr-4 ml-4 lg:pr-2" data-te-nav-item-ref>
+        <a
+        class="block transition duration-150 ease-in-out font-semibold disabled:text-black/30 dark:hover:text-neutral-950 lg:p-2 [&.active]:text-black/90"
+        href="#!"
+        data-te-nav-link-ref
+        data-te-ripple-init
+        data-te-ripple-color="light"
+        >NOS FILMS</a>
+    </li>
+
     <li class="mb-4 lg:mb-0 mr-4 ml-4 lg:pr-2" data-te-nav-item-ref>
         <a
         class="block transition duration-150 ease-in-out font-semibold disabled:text-black/30 dark:hover:text-neutral-950 lg:p-2 [&.active]:text-black/90"
@@ -103,16 +74,21 @@ data-te-navbar-nav-ref>
     </li> -->
     <li class="mb-2 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
         <a
+        class="block transition font-semibold ease-in-out hover:text-neutral-700 focus:text-neutral-700 disabled:text-black/30 dark:hover:text-neutral-950 dark:focus:text-white lg:p-2 [&.active]:text-black/90"
+        href="#!"
+        data-te-nav-link-ref
+        data-te-ripple-init
+        data-te-ripple-color="light"
+        >CONTACT</a>
+    </li>
+    <li class="mb-2 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
+        <a
         class="block transition duration-150 font-semibold ease-in-out hover:text-neutral-700 focus:text-neutral-700 disabled:text-black/30 dark:hover:text-neutral-950 dark:focus:text-white lg:p-2 [&.active]:text-black/90"
         href="#!"
         data-te-nav-link-ref
         data-te-ripple-init
-        
         data-te-ripple-color="light"
-        >CONTACT</a>
-    </li>
-    <li class="mt-1.5 ml-10 lg:mb-0 text-xl font-bold" data-te-nav-item-ref>
-    <button id="ouvrir-registre" class="text-bouton-connexion">CONNEXION</button>
+        >SE CONNECTER</a>
     </li>
 </ul>
 
