add relation and AllHorrorMovies Controller

--- a/templates/index/home.html.twig
+++ b/templates/index/home.html.twig
@@ -16,13 +16,13 @@
                 <div class="relative flex text-white items-stretch">
                     <input
                     type="search"
-                    class="relative m-1 -mr-0.5 block w-80 min-w-0 flex-auto px-4 py-3 font-normal dark:text-black focus:outline-none focus:ring-0 "
+                    class="relative -mr-1 block w-80 min-w-0 flex-auto px-4 py-3 font-normal dark:text-black focus:outline-none focus:ring-0 "
                     placeholder="Adresse électronique"
                     aria-label="Search"
                     aria-describedby="button-addon3" />
                     <!--Search button-->
                     <button
-                    class="border-0 px-3 text-xl border-red-600 font-bold bg-red-600   "
+                    class="border-0 px-3 py-4 ml-1 text-xl border-red-600 font-bold bg-red-600   "
                     type="button"
                     id="button-addon3"
                     data-te-ripple-init>
