--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -47,7 +47,7 @@ data-te-navbar-nav-ref>
 <li class="mb-4 lg:mb-0 mr-4 ml-4 lg:pr-2" data-te-nav-item-ref>
         <a
         class="block transition duration-150 ease-in-out font-semibold disabled:text-black/30 dark:hover:text-neutral-950 lg:p-2 [&.active]:text-black/90"
-        href="#!"
+        href="/all-movies"
         data-te-nav-link-ref
         data-te-ripple-init
         data-te-ripple-color="light"
@@ -57,7 +57,7 @@ data-te-navbar-nav-ref>
     <li class="mb-4 lg:mb-0 mr-4 ml-4 lg:pr-2" data-te-nav-item-ref>
         <a
         class="block transition duration-150 ease-in-out font-semibold disabled:text-black/30 dark:hover:text-neutral-950 lg:p-2 [&.active]:text-black/90"
-        href="#!"
+        href="/a-propos"
         data-te-nav-link-ref
         data-te-ripple-init
         data-te-ripple-color="light"
@@ -75,7 +75,7 @@ data-te-navbar-nav-ref>
     <li class="mb-2 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
         <a
         class="block transition font-semibold ease-in-out hover:text-neutral-700 focus:text-neutral-700 disabled:text-black/30 dark:hover:text-neutral-950 dark:focus:text-white lg:p-2 [&.active]:text-black/90"
-        href="#!"
+        href="/contact"
         data-te-nav-link-ref
         data-te-ripple-init
         data-te-ripple-color="light"
@@ -84,7 +84,7 @@ data-te-navbar-nav-ref>
     <li class="mb-2 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
         <a
         class="block transition duration-150 font-semibold ease-in-out hover:text-neutral-700 focus:text-neutral-700 disabled:text-black/30 dark:hover:text-neutral-950 dark:focus:text-white lg:p-2 [&.active]:text-black/90"
-        href="#!"
+        href="/login"
         data-te-nav-link-ref
         data-te-ripple-init
         data-te-ripple-color="light"
