Movies Collection and Item with template.

--- a/templates/index/home.html.twig
+++ b/templates/index/home.html.twig
@@ -10,7 +10,9 @@
 
     <div class="px-6 text-left text-white md:px-12">
         <h1 class="mt-20 mb-4 pb-20 text-5xl font-bold">UNE NOUVELLE FAÇON D'AVOIR PEUR</h1>
-        <h3 class="mb-5 text-3xl text-white font-bold">Faites l'essai de 7 jours gratuits</h3>
+        <h3 class="mb-5 text-3xl text-white font-bold">Restez connectés !</h3>
+        <h3 class="mb-5 text-3xl text-white font-bold">Inscrivez-vous à notre newsletter : </h3>
+
         <div class="mb-0">
             <div class="relative flex w-full flex-wrap items-stretch">
                 <div class="relative flex text-white items-stretch">
