--- a/templates/movies/allHorrorMovies.html.twig
+++ b/templates/movies/allHorrorMovies.html.twig
@@ -3,10 +3,8 @@
 {% block title %}Nos Films{% endblock %}
 
 {% block body %}
-    
-
   {% for horrorMovie in horrorMovies %}
-    {% include 'all_horror_movies/_movies_displate.html.twig' with { horrorMovies: horrorMovies } only %}
+    {% include 'movies/_movies_displate.html.twig' with { horrorMovies: horrorMovies } only %}
   {% else %}
     <p>Aucun film trouvé</p>
   {% endfor %}
