--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -7,7 +7,7 @@ data-te-navbar-ref>
     <a href="/">
         <div class="Logo">
             <source srcset="img/devils_palace_logo.png">
-            <img src="img/devils_palace_logo.png"  alt="Logo Devil's Place" class="img-fluid ml-12" width="100" height="90">
+            <img src="{{ asset('img/devils_palace_logo.png') }}" alt="Logo Devil's Place" class="img-fluid ml-12" width="100" height="90">
         </div>  
     </a>
      <div class="pt-2 relative mx-auto text-gray-800">
