--- a/templates/movies/_movies_displate.html.twig
+++ b/templates/movies/_movies_displate.html.twig
@@ -4,8 +4,7 @@
             <a href="{{ path('movie_item', { id: horrorMovie.id }) }}"> <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ horrorMovie.name }}</h5></a>
             <img src="{{ horrorMovie.cover }}" alt="Movie Cover" class="mt-0" style="max-height: 70%;">
             Réalisé par :
-            <a href="#"><h5 class="mb-2 text-m font-bold tracking-tight text-gray-900 dark:text-white"> {{ horrorMovie.director.name }}</h5></a>
-            <a href="{{ path('movie_item', { id: horrorMovie.id }) }}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white ">
+            <a href="{{ path('director_item', { id: horrorMovie.director.id }) }}"><h5 class="mb-2 text-m font-bold tracking-tight text-gray-900 dark:text-white"> {{ horrorMovie.director.name }}</h5></a>
             </a>
         </div>
         {% if loop.index % 3 == 0 %}
