--- a/templates/movies/item.html.twig
+++ b/templates/movies/item.html.twig
@@ -8,7 +8,12 @@
   <div class="mt-4 flex justify-center items-center">
     <div class="flex flex-col">
       <h1 class="text-center text-3xl font-bold mb-4">{{ horrorMovie.name }}</h1>
-        <a href="{{ path('director_item', { id: horrorMovie.director.id }) }}"><h5 class="mb-2 text-center font-bold tracking-tight text-gray-900 dark:text-white"> {{ horrorMovie.director.name }}</h5></a>      <div class="text-center max-w-md mb-4">
+      {% if horrorMovie.director %}
+        <a href="{{ path('director_item', { id: horrorMovie.director.id }) }}">
+          <h5 class="mb-2 text-center font-bold tracking-tight text-gray-900 dark:text-white">{{ horrorMovie.director.name }}</h5>
+        </a>
+      {% endif %}
+      <div class="text-center max-w-md mb-4">
         <p>{{ horrorMovie.synopsis }}</p>
       </div>
     </div>
