--- a/templates/index/home.html.twig
+++ b/templates/index/home.html.twig
@@ -1,38 +1,23 @@
 {% extends 'base.html.twig' %}
 
-
 {% block title %} Devil's Palace{% endblock %}
 
 {% block body %}
-<div
-    class="relative overflow-hidden bg-cover bg-no-repeat"
-    style="background-position: 50%; background-image: url('img/ghost_face_bg.jpg'); height: 459px;">
+<div class="relative overflow-hidden bg-cover bg-no-repeat" 
+style="background-position: 50%; background-image: url('img/ghost_face_bg.jpg'); height: 459px;">
 
+    <main class="prose mx-auto">
+    {% for type, messages in app.flashes(['success', 'error']) %}
+        {% for message in messages %}
+            <div class="style bg-{{ type == 'success' ? 'green' : 'red' }}-200 text-{{ type == 'success' ? 'green' : 'red' }} text-center py-2 px-5 my-4 w-54">{{ message }}</div>
+        {% endfor %}
+    {% endfor %}
+    </main>
     <div class="px-6 text-left text-white md:px-12">
-        <h1 class="mt-20 mb-4 pb-20 text-5xl font-bold">UNE NOUVELLE FAÇON D'AVOIR PEUR</h1>
+        <h1 class="mt-10 mb-4 pb-10 text-5xl font-bold">UNE NOUVELLE FAÇON D'AVOIR PEUR</h1>
         <h3 class="mb-5 text-3xl text-white font-bold">Restez connectés !</h3>
-        <h3 class="mb-5 text-3xl text-white font-bold">Inscrivez-vous à notre newsletter : </h3>
-
-        <div class="mb-0">
-            <div class="relative flex w-full flex-wrap items-stretch">
-                <div class="relative flex text-white items-stretch">
-                    <input
-                    type="search"
-                    class="relative -mr-1 block w-80 min-w-0 flex-auto px-4 py-3 font-normal dark:text-black focus:outline-none focus:ring-0 "
-                    placeholder="Adresse électronique"
-                    aria-label="Search"
-                    aria-describedby="button-addon3" />
-                    <!--Search button-->
-                    <button
-                    class="border-0 px-3 py-4 ml-1 text-xl border-red-600 font-bold bg-red-600   "
-                    type="button"
-                    id="button-addon3"
-                    data-te-ripple-init>
-                    J'EN PROFITE
-                    </button>
-            </div>
-        </div>
-        <p class="mt-12 mb-5 text-xs font-semibold">En cliquant le bouton « J'en profite », vous indiquez avoir lu et accepté les <u>Termes de Services</u> et la <u>Politique de confidentialité</u>.</p>
+        <h3 class="mb-5 text-3xl text-white font-bold">Inscrivez-vous à notre Newsletter </h3>
+        {{ include('newsletter_form.html.twig') }}
     </div>
 </div>
 {% endblock %}
