Authenticator, login form, nav changements, EmailVerifier

--- a/templates/admin/home.html.twig
+++ b/templates/admin/home.html.twig
@@ -10,7 +10,7 @@ Devil's Palace Dashboard
 
 {% block main %}
     <div class="my-custom-content">
-        <h1>Bienvenue brave Administrateur 🙋 !!<br> ( j'espère pour moi que tu l'es 😿 )!</h1>
+        <h1>Bienvenue brave Administrateur 🙋 !!<br> ( J'espère pour moi que tu l'es 😿 )!</h1>
     </div>
     <br>
     <h2>{{ totalMovies }} films répertoriés !</h2>
