--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -82,13 +82,17 @@ data-te-navbar-nav-ref>
         >CONTACT</a>
     </li>
     <li class="mb-2 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
-        <a
-        class="block transition duration-150 font-semibold ease-in-out hover:text-neutral-700 focus:text-neutral-700 disabled:text-black/30 dark:hover:text-neutral-950 dark:focus:text-white lg:p-2 [&.active]:text-black/90"
-        href="/login"
-        data-te-nav-link-ref
-        data-te-ripple-init
-        data-te-ripple-color="light"
-        >SE CONNECTER</a>
+    {% if app.user %}
+    <li class="mb-2 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
+        <a href="{{ path('app_logout') }}" class="ml-6 font-semibold block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">DECONNEXION</a>
+        <span class="text-sm">({{ app.user.userIdentifier }})</span>
+    </li>
+{% else %}
+    <li class="mb-2 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
+        <a class="block transition duration-150 font-semibold ease-in-out hover:text-neutral-700 focus:text-neutral-700 disabled:text-black/30 dark:hover:text-neutral-950 dark:focus:text-white lg:p-2 [&.active]:text-black/90" href="/login" data-te-nav-link-ref data-te-ripple-init data-te-ripple-color="light">SE CONNECTER</a>
+    </li>
+{% endif %}
+        
     </li>
 </ul>
 
