--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -85,7 +85,7 @@ data-te-navbar-nav-ref>
     {% if app.user %}
     <li class="mb-2 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
         <a href="{{ path('app_logout') }}" class="ml-6 font-semibold block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">DECONNEXION</a>
-        <span class="text-sm">({{ app.user.userIdentifier }})</span>
+        <span class="ml-6 text-sm">({{ app.user.userIdentifier }})</span>
     </li>
 {% else %}
     <li class="mb-2 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
